[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator"
readme = "README.md"
authors = [
    { name = "Haruto Morita"},
	{ name = "Daichi Ogawa"}
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
exclude = ["venv", ".venv", "build", "__pycache__"]

[[tool.mypy.overrides]]
module = "mlx.*"
ignore_missing_imports = true

[tool.flake8]
exclude = ["venv", ".venv", "build", "__pycache__"]
